--- a/todo.txt
+++ b/todo.txt
@@ -10,3 +10,4 @@ TODO:
 7 - Text/email budget summary.
 8 - Trello texts for upcoming expenses
 9 - Change "Add expense" to "Update expense" when make edits to expense that already exists.
+10 - Add display name user.displayName and images via google user.photoURL
